@@ -1,3 +1,9 @@
+2008-04-02  Benjamin Drung  <benjamin.drung@gmail.com>
+
+	* [r42] src/dvdbackup.c (DVDGetFileSet):
+	  - fixed typo
+	  - added more verbose output
+
 2008-03-24  Benjamin Drung  <benjamin.drung@gmail.com>
 
 	* [r40] src/dvdbackup.c: Changed type of file sizes from int to off_t 
